--- a/CoinGame/app/src/main/res/layout/activity_main.xml
+++ b/CoinGame/app/src/main/res/layout/activity_main.xml
@@ -116,16 +116,9 @@
 
                 </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-
             <Button
+                android:layout_marginTop="30dp"
+                android:id="@+id/btnJogar"
                 android:textColor="#fff"
                 android:background="@color/colorPrimaryDark"
                 android:text="Play"
@@ -135,7 +128,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
+            android:layout_weight="0.3"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="horizontal"
             android:layout_width="match_parent"
